fixed bg on mobile

--- a/styles.css
+++ b/styles.css
@@ -35,11 +35,11 @@ body {
   }
 
 
-  @media screen and (max-width: 1000px) {
+  /* @media screen and (max-width: 1000px) {
     body {
       background-image: none;
     }
-  }
+  } */
 
   .tree {
     display: flex;
